spacing issue between members

--- a/themes/tcn-coalition-theme/assets/scss/3-plugins/_members.sass
+++ b/themes/tcn-coalition-theme/assets/scss/3-plugins/_members.sass
@@ -16,7 +16,7 @@ section.members
 .member
   flex: 100%
   max-width: 100%
-  margin: 0 0 15px 2em
+  margin: 0 7px 2em 7px
   padding: 15px 0.3em
   min-height: 1px
   width: 100%
